--- a/package.json
+++ b/package.json
@@ -33,4 +33,12 @@
       "last 1 safari version"
     ]
   }
+  ...,
+  "scripts": {
+    ...,
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  ...,
+  "homepage": "https://(user name).github.io/(repository name)/"
 }
