--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://second2music.github.io/todo-app",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
@@ -7,12 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.0.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,15 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-}
-{
-  ...,
-  "scripts": {
-    ...,
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
   },
-  ...,
-  "homepage": "https://second2music.github.io/todo-app/"
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
